test_suite/tests/ui/unknown-attribute/variant.stderr
error: unknown serde variant attribute `abc`
  --> $DIR/variant.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

